--- a/src/index.css
+++ b/src/index.css
@@ -217,11 +217,9 @@ button + button {
 .channel[data-type="out"] {
     background: rgba(255,0,0,.2);
 }
-.peer-info {
-    padding: 12px;
-    margin: 12px 0;
-    color: #333;
-    border-radius: 7px;
+
+h3.peer-alias {
+    margin: 0;
 }
 .channel {
     margin: 12px 0;
